--- a/POS/version.properties
+++ b/POS/version.properties
@@ -1,6 +1,7 @@
 #Version properties
+#Thu, 09 Oct 2014 13:25:42 +0300
 
-build.revision.number=0
+build.revision.number=4
 build.minor.number=0
 build.major.number=0
-build.number=0.0.0
+build.number=0.0.4
