--- a/POS/build.xml
+++ b/POS/build.xml
@@ -71,7 +71,12 @@
 	
 	<target name="run" depends="build">
 		<!-- Run the Intro class -->
-		<java classname="ee.ut.math.tvt.TRAtarkvaratehnika.Intro" fork="true" classpathref="run.classpath">
+		<java
+			classname="ee.ut.math.tvt.TRAtarkvaratehnika.Intro"
+			classpathref="run.classpath"
+			fork="true">
+			<jvmarg value="-Xdebug" />
+			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" />
 		</java>
 	</target>
 	
