--- a/POS/build.xml
+++ b/POS/build.xml
@@ -147,7 +147,33 @@
 			<arg value="master" />
 		</exec>
 	</target>
-	
+
+	<target name="git_tag">
+		<!-- Prompt for tag name and comment-->
+		<input message="Tag name:" addproperty="tag-name" />
+		<input message="Comment:" addproperty="tag-comment" />
+		<!-- Add all changed files to commit -->
+		<exec executable="git">
+			<arg value="tag" />
+			<arg value="-a" />
+			<arg value="${tag-name}" />
+			<arg value="-m" />
+			<arg value="${tag-comment}" />
+		</exec>
+
+		<!-- Prompt for username and password-->
+		<input message="Username:" addproperty="commit-username" />
+		<input message="Password:" addproperty="commit-password" />
+
+		<!-- Push to GitHub -->
+		<exec executable="git">
+			<arg value="push" />
+			<arg value="--tags" />
+			<arg value="https://${commit-username}:${commit-password}@github.com/taivop/xse.git" />
+			<arg value="master" />
+		</exec>
+	</target>
+
 
 
 </project>
