--- a/POS/build.xml
+++ b/POS/build.xml
@@ -89,6 +89,8 @@
 		<manifestclasspath property="lib.list" jarfile="${build}/jar/TRAtarkvaratehnika.jar">
 			<classpath path="${build}">
 				<pathelement path="lib/log4j-1.2.17.jar" />
+				<pathelement path="lib/jgoodies-common-1.6.0.jar" />
+				<pathelement path="lib/jgoodies-looks-2.5.3.jar" />
 				<pathelement path="etc" />
 			</classpath>
 		</manifestclasspath>
