--- a/POS/build.xml
+++ b/POS/build.xml
@@ -9,14 +9,25 @@
 	<property name="src" location="src" />
 	<property name="build" location="build" />
 	<property name="dist" location="dist" />
-	<property name="lib.dir" location="lib" />
 	<property name="etc.dir" location="lib" />
+	<property name="lib.dir" value="${basedir}/lib" />
+
+	<!-- Database variables -->
+	<property name="data.dir" value="${basedir}/data" />
+	<property name="db.file" value="${data.dir}/POSdb" />
+	<property name="db.alias" value="POS" />
+	<property name="db.url" value="jdbc:hsqldb:hsql://localhost/POS" />
+	<property name="lib.hibernate.dir" value="${lib.dir}/hibernate" />
 
 
 	<!-- Compilation classpath -->
 	<path id="compile.classpath">
 		<fileset dir="${lib.dir}">
+			<include name="*.jar" />
 			<include name="**/*.jar" />
+		</fileset>
+		<fileset dir="${lib.hibernate.dir}">
+			<include name="*.jar" />
 		</fileset>
 	</path>
 
@@ -30,6 +41,17 @@
 		<fileset dir="${etc.dir}">
 			<include name="log4j.dtd" />
 			<include name="log4j.xml" />
+		</fileset>
+
+		<pathelement location="${build.classes.dir}" />
+		<!-- configuration -->
+		<pathelement location="${conf.dir}" />
+		<fileset dir="${lib.dir}">
+			<include name="*.jar" />
+		</fileset>
+
+		<fileset dir="${lib.hibernate.dir}">
+			<include name="*.jar" />
 		</fileset>
 	</path>
 
@@ -175,6 +197,18 @@
 			<arg value="https://${commit-username}:${commit-password}@github.com/taivop/xse.git" />
 			<arg value="master" />
 		</exec>
+	</target>
+
+	<target name="dbmanager" description="Start the HSQLDB manager">
+		<java classname="org.hsqldb.util.DatabaseManagerSwing" classpathref="run.classpath" fork="yes">
+			<arg line="--user sa --url ${db.url}" />
+		</java>
+	</target>
+
+	<target name="startdb" description="Start the HSQLDB with the default params">
+		<java classname="org.hsqldb.Server" classpathref="run.classpath" fork="yes">
+			<arg line="-database.0 '${db.file}' -dbname.0 '${db.alias}'" />
+		</java>
 	</target>
 
 
