--- a/POS/build.xml
+++ b/POS/build.xml
@@ -8,10 +8,12 @@
 	<!-- Set global properties for this build -->
 	<property name="src" location="src" />
 	<property name="build" location="build" />
+	<property name="build.test.dir" value="${build.dir}/test" />
 	<property name="dist" location="dist" />
 	<property name="etc.dir" location="${basedir}/etc" />
 	<property name="conf.dir" location="conf" />
 	<property name="lib.dir" value="${basedir}/lib" />
+	<property name="test.dir" value="${basedir}/test" />
 
 	<!-- Database variables -->
 	<property name="data.dir" value="${basedir}/data" />
@@ -57,16 +59,12 @@
 	</path>
 
 	<!-- Test classpath -->
-	<path id="test.classpath">
-		<pathelement location="${build}" />
-		<pathelement location="." />
+	<path id="test-classpath">
 		<fileset dir="${lib.dir}">
-			<include name="**/*.jar" />
+			<include name="*.jar" />
 		</fileset>
-		<fileset dir="${etc.dir}">
-			<include name="log4j.dtd" />
-			<include name="log4j.xml" />
-		</fileset>
+		<pathelement path="${build.classes.dir}/" />
+		<pathelement path="${build.test.dir}/" />
 	</path>
 
 	<!-- Copy hibernate.cfg.xml to build folder or else the JAR won't work-->
@@ -80,6 +78,7 @@
 		<tstamp />
 		<!-- Create build directory structure used by compile -->
 		<mkdir dir="${build}" />
+		<mkdir dir="${build.test.dir}" />
 		<!-- Update application.properties -->
 	</target>
 
@@ -243,6 +242,24 @@
 		</java>
 	</target>
 
+	<target name="build-tests" depends="build" description="Build the system">
+		<javac srcdir="${test.dir}" destdir="${build.test.dir}" debug="true" debuglevel="lines,vars,source" encoding="utf-8" compiler="modern" target="1.5" source="1.5" classpathref="libs">
+			<classpath>
+				<pathelement path="${build.classes.dir}" />
+			</classpath>
+		</javac>
+	</target>
+
+	<target name="test" depends="build-tests" description="Run the template application">
+		<junit>
+			<classpath refid="test-classpath" />
+
+			<formatter type="brief" usefile="false" />
+			<batchtest>
+				<fileset dir="${build.test.dir}" includes="**/*.class" />
+			</batchtest>
+		</junit>
+	</target>
 
 
 </project>
